draw the rest of the owl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Let's move our stuff from Favro to Trello!"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["requests>=2.32.4", "requests-ratelimiter>=0.7.0"]
+dependencies = [
+    "mypy>=1.17.1",
+    "requests>=2.32.4",
+ "requests-ratelimiter>=0.7.0",
+]
